--- a/lab4.ipynb
+++ b/lab4.ipynb
@@ -2,7 +2,7 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": 13,
+      "execution_count": 20,
       "id": "f5651f75",
       "metadata": {
         "id": "f5651f75"
@@ -33,10 +33,10 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "SKSqAi2Uuzsa",
-        "outputId": "e73b056a-e3f9-4dec-9f50-e5338d5e0a56"
+        "outputId": "d58c0454-8c82-4711-e2ed-53b89c29a55a"
       },
       "id": "SKSqAi2Uuzsa",
-      "execution_count": 9,
+      "execution_count": 21,
       "outputs": [
         {
           "output_type": "stream",
@@ -49,7 +49,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 16,
+      "execution_count": 22,
       "id": "4a9a6e04",
       "metadata": {
         "colab": {
@@ -57,14 +57,14 @@
           "height": 1000
         },
         "id": "4a9a6e04",
-        "outputId": "29d66b12-b11d-4c42-92f4-a8225d13cc9f"
+        "outputId": "ee487b4e-585a-4bd4-8379-9875ae9e9c3a"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "--- OCSVM Linear ---\n",
+            "OCSVM Linear\n",
             "Balanced Accuracy: 0.9833\n",
             "ROC AUC: 1.0000\n"
           ]
@@ -83,8 +83,7 @@
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "\n",
-            "--- OCSVM RBF ---\n",
+            "OCSVM RBF\n",
             "Balanced Accuracy: 0.9804\n",
             "ROC AUC: 0.9998\n"
           ]
@@ -103,8 +102,7 @@
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "\n",
-            "--- DeepSVDD ---\n",
+            "DeepSVDD\n",
             "Epoch 1/20, Loss: 6.966450810432434\n",
             "Epoch 2/20, Loss: 6.6218341588974\n",
             "Epoch 3/20, Loss: 6.711485534906387\n",
@@ -209,24 +207,22 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 17,
+      "execution_count": 23,
       "id": "43b13d39",
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "43b13d39",
-        "outputId": "dd502d66-d507-4ffb-e670-154385d0e114"
+        "outputId": "4fcfaa3e-a71c-490d-adaa-2c467ec73e02"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "--- Exercise 2 ---\n",
-            "Contamination in train: 0.0984\n",
             "Best params: {'ocsvm__gamma': 0.01, 'ocsvm__kernel': 'rbf', 'ocsvm__nu': 0.2}\n",
-            "Balanced Accuracy on Test: 0.8604\n"
+            "Balanced Accuracy on test: 0.8604\n"
           ]
         }
       ],
@@ -278,14 +274,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 19,
+      "execution_count": 24,
       "id": "2b4e3366",
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "2b4e3366",
-        "outputId": "d5541905-082b-48fd-eb80-a8ec1df2abe2"
+        "outputId": "cd255fff-2fd0-4f60-b2e6-6f631fde72e4"
       },
       "outputs": [
         {
