--- a/lab4.ipynb
+++ b/lab4.ipynb
@@ -2,7 +2,7 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": 20,
+      "execution_count": 25,
       "id": "f5651f75",
       "metadata": {
         "id": "f5651f75"
@@ -33,10 +33,10 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "SKSqAi2Uuzsa",
-        "outputId": "d58c0454-8c82-4711-e2ed-53b89c29a55a"
+        "outputId": "e4a79171-40ec-4c89-bcd6-ae8dbddd5466"
       },
       "id": "SKSqAi2Uuzsa",
-      "execution_count": 21,
+      "execution_count": 26,
       "outputs": [
         {
           "output_type": "stream",
@@ -49,7 +49,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 22,
+      "execution_count": 27,
       "id": "4a9a6e04",
       "metadata": {
         "colab": {
@@ -57,7 +57,7 @@
           "height": 1000
         },
         "id": "4a9a6e04",
-        "outputId": "ee487b4e-585a-4bd4-8379-9875ae9e9c3a"
+        "outputId": "cb084527-7085-4f76-d1df-cdf33e1c30f6"
       },
       "outputs": [
         {
@@ -207,14 +207,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 23,
+      "execution_count": 28,
       "id": "43b13d39",
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "43b13d39",
-        "outputId": "4fcfaa3e-a71c-490d-adaa-2c467ec73e02"
+        "outputId": "86e01e71-a604-410d-a4ec-8d5c6e703cfe"
       },
       "outputs": [
         {
@@ -274,14 +274,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 24,
+      "execution_count": 29,
       "id": "2b4e3366",
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "2b4e3366",
-        "outputId": "cd255fff-2fd0-4f60-b2e6-6f631fde72e4"
+        "outputId": "2e5bc655-237c-46b2-9585-db3590104149"
       },
       "outputs": [
         {
@@ -292,7 +292,7 @@
             "Balanced Accuracy: 0.9771\n",
             "ROC AUC: 0.9919\n",
             "\n",
-            "DeepSVDD (Arch 1: [64, 32])\n",
+            "DeepSVDD[64, 32])\n",
             "Epoch 1/20, Loss: 537.0809683203697\n",
             "Epoch 2/20, Loss: 537.0120834112167\n",
             "Epoch 3/20, Loss: 537.3140606880188\n",
@@ -316,7 +316,7 @@
             "Balanced Accuracy: 0.9674\n",
             "ROC AUC: 0.9916\n",
             "\n",
-            "DeepSVDD (Arch 2: [32, 16, 8])\n",
+            "DeepSVDD[32, 16, 8])\n",
             "Epoch 1/20, Loss: 32.76203013258055\n",
             "Epoch 2/20, Loss: 33.57270192494616\n",
             "Epoch 3/20, Loss: 33.445166893769056\n",
@@ -365,7 +365,7 @@
         "\n",
         "n_features_shuttle = X_train_norm.shape[1]\n",
         "\n",
-        "print(\"\\nDeepSVDD (Arch 1: [64, 32])\")\n",
+        "print(\"\\nDeepSVDD[64, 32])\")\n",
         "dsvdd1 = DeepSVDD(hidden_neurons=[64, 32], contamination=contamination, random_state=42, epochs=20, verbose=0, n_features=n_features_shuttle)\n",
         "dsvdd1.fit(X_train_norm)\n",
         "y_pred1 = dsvdd1.predict(X_test_norm)\n",
@@ -374,7 +374,7 @@
         "print(f\"Balanced Accuracy: {balanced_accuracy_score(y_test, y_pred1):.4f}\")\n",
         "print(f\"ROC AUC: {roc_auc_score(y_test, y_scores1):.4f}\")\n",
         "\n",
-        "print(\"\\nDeepSVDD (Arch 2: [32, 16, 8])\")\n",
+        "print(\"\\nDeepSVDD[32, 16, 8])\")\n",
         "dsvdd2 = DeepSVDD(hidden_neurons=[32, 16, 8], contamination=contamination, random_state=42, epochs=20, verbose=0, n_features=n_features_shuttle)\n",
         "dsvdd2.fit(X_train_norm)\n",
         "y_pred2 = dsvdd2.predict(X_test_norm)\n",
